@@ -1,10 +1,8 @@
 #' Create XML node "tabbook" for RKWard plugins
 #'
 #' @param label Character string, a text label for this plugin element.
-#' @param tab.labels Character vector, where each string defines the name of one tab.
-#'		The number of \code{tab.labels} also defines the number of tabs.
-#' @param children An optional list with objects of class \code{XiMpLe.node} (or a list of these objects).
-#'		You must provide one element for each tab. Use \code{NULL} for tabs without predefined children.
+#' @param tabs An optional named list with objects of class \code{XiMpLe.node} (or a list of these objects).
+#'		You must provide one named element for each tab. Use \code{NULL} for tabs without predefined children.
 #' @param id.name Character vector, unique IDs for the tabbook (first entry) and all tabs.
 #'		If \code{"auto"}, IDs will be generated automatically from the labels.
 #'		If \code{NULL}, no IDs will be given.
@@ -14,27 +12,24 @@
 #'		\href{help:rkwardplugins}{Introduction to Writing Plugins for RKWard}
 #' @examples
 #' test.checkboxes <- rk.XML.row(rk.XML.col(
-#'   list(
-#'     rk.XML.cbox(label="foo", val="foo1", chk=TRUE),
-#'     rk.XML.cbox(label="bar", val="bar2"))))
+#'   rk.XML.cbox(label="foo", val="foo1", chk=TRUE),
+#'   rk.XML.cbox(label="bar", val="bar2")))
 #' test.dropdown <- rk.XML.dropdown("mydrop",
-#'   opts=list("First Option"=c(val="val1"),
+#'   options=list("First Option"=c(val="val1"),
 #'   "Second Option"=c(val="val2", chk=TRUE)))
 #' # combine the above into a tabbook
-#' test.tabbook <- rk.XML.tabbook("My Tabbook", tab.labels=c("First Tab",
-#'   "Second Tab"), children=list(test.checkboxes, test.dropdown))
+#' test.tabbook <- rk.XML.tabbook("My Tabbook",
+#'   tabs=list("First Tab"=test.checkboxes, "Second Tab"=test.dropdown))
 #' cat(pasteXMLNode(test.tabbook))
 
-rk.XML.tabbook <- function(label=NULL, tab.labels, children=list(), id.name="auto"){
-	num.tabs <-  length(tab.labels)
+rk.XML.tabbook <- function(label=NULL, tabs=list(), id.name="auto"){
+	tab.labels <- names(tabs)
+	num.tabs <- length(tabs)
+
 	# check if number of children fits
-	if(length(children) > 0){
-		if(!identical(length(children), num.tabs)){
-			stop(simpleError("If you provide children, you must do so for each tab (use NULL for tabs without children)!"))
-		} else {}
-	} else {
-		children <- NULL
-	}
+	if("" %in% tab.labels & num.tabs > 0){
+		stop(simpleError("All tabs must have a label (named list)!"))
+	} else {}
 
 	if(identical(id.name, "auto")){
 		tab.ids <- auto.ids(tab.labels, prefix=ID.prefix("tab", length=3))
@@ -47,8 +42,8 @@ rk.XML.tabbook <- function(label=NULL, tab.labels, children=list(), id.name="aut
 			} else if(!is.null(id.name)){
 				attr.list[["id"]] <- id.name[[this.num + 1]]
 			} else {}
-			if(!is.null(children[[this.num]])){
-				child <- children[[this.num]]
+			if(!is.null(tabs[[this.num]])){
+				child <- tabs[[this.num]]
 			} else {
 				child <- list()
 			}
